cmake_minimum_required(VERSION 3.10)
project(cicpoffs)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(cicpoffs cicpps.cpp fuse_launcher_gpl2.cpp)
install(TARGETS cicpoffs DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
find_package(PkgConfig REQUIRED)
pkg_check_modules(FUSE3 REQUIRED fuse3)
target_link_libraries(cicpoffs ${FUSE3_LIBRARIES})
target_include_directories(cicpoffs PUBLIC ${FUSE3_INCLUDE_DIRS})
target_compile_options(cicpoffs PUBLIC ${FUSE3_CFLAGS_OTHER})
